# KIP

./: CMakeLists.txt  helloWorld.cu  main.cpp  main.cu
build_linux/: KIP
